# gpha_mpox_kmer_typing

./: README.md  changelog.md  environment.yml  main.nf  pyproject.toml
analytics/: kmer_typing_functions.py
data/: k31_s1000_orthopox_refs_genomic_renamed.fna.msh  kamituga_test.fna  kamituga_test.mash_dist.tsv  tidy_mash.csv  top_hits.csv
data/logs/: kamituga_test-mpox_kmer_typing.stdout
docker_files/: environment.yml
mpox_kmer_typing/: directories.py  mpox_kmer_typing.py
src/analytics/: kmer_typing_functions.py  processing.py
src/mpox_kmer_typing/: commands.py  logfile.py  mpox_kmer_typing.py
